src/test/deca/context/valid/inheritance/extends_user_class_simple.deca
// Description :
//    Classe étendant explicitement une autre classe utilisateur.
//
// Resultats :
//    OK

class A {
    int x;
}

class B extends A {
    int y;
}

{
}

