src/test/deca/context/invalid/fields/field_visibility_mismatch_in_subclass.deca
// Description :
//    Redéclaration d'un champ hérité avec une visibilité incompatible.
//
// Resultats :
//    Erreur contextuelle
//    Ligne <No_de_ligne> : <message d'erreur de votre compilateur>

class A {
protected int x;
}

class B extends A {
public int x;
}

{
}

